[GOHW-7]: change status and packaging types to enums + add test grpc enviromental variable for testing
